# HSE_OS

./: README.md
HW_01/: sum.circ  trafic_light.circ
HW_02/: README.md
HW_02/hello-world/: build.sh  header.h  hello.s  main  main.c  task-01.s
HW_02/primes/: build.sh  header.h  main.c  primes.s  task-02.s
HW_03/: build.sh  header.h  hw3.s  main.c
HW_04/: BuddyAllocator.cpp  BuddyAllocator.hpp  CMakeLists.txt  README.md  main.cpp
HW_05/: CMakeLists.txt  main.cpp  mmap_page_allocator.hpp  mmap_page_allocator.inl  page_allocator.hpp  slab_allocator.cpp  slab_allocator.hpp
HW_06/: CLI.cpp  CLI.hpp  CMakeLists.txt  FileContainer.cpp  FileContainer.hpp  Tar.cpp  Tar.hpp  main.cpp
HW_06/test-dir/: softlink  testFile1.txt
HW_06/test-dir/subdir1/: kek.txt
